--- a/ProjetoBase/nbproject/project.properties
+++ b/ProjetoBase/nbproject/project.properties
@@ -27,10 +27,11 @@ dist.dir=dist
 dist.jar=${dist.dir}/Layouts.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.sqlite-jdbc-3.20.0.jar=C:\\Users\\Renato\\Documents\\NetBeansProjects\\Bibliotecas\\sqlite-jdbc-3.20.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.sqlite-jdbc-3.20.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
